--- a/index_list/member_login.html
+++ b/index_list/member_login.html
@@ -45,14 +45,14 @@
                         </div>
                         <div class="form-group row">
                             <label for="secret" class="form_secret"></label>
-                            <input type="text" id="secret" class="form_secret" placeholder="請輸入您的密碼" />
+                            <input type="password" id="secret" class="form_secret" placeholder="請輸入您的密碼" />
                         </div>
                         <div class="form-group row">
                             <input type="submit" class="btn_member_login" value="登入" />
                         </div>
                         <div class="form-group row">
                             <div class="span_container">
-                                <div><a href="#forgot_password">忘記密碼？</a></div>
+                                <div><a href="#forgot_password">忘記密碼?</a></div>
                                 <div>
                                     <input type="checkbox" name="automatically_login" id="automatically_login" />
                                     <span>自動登入</span>
