--- a/index_list/order_manage.html
+++ b/index_list/order_manage.html
@@ -32,21 +32,22 @@
         <div class="panel-group" id="accordion">
             <div class="panel panel-default">
                 <div class="panel-heading">
-                    <h4 class="panel-title"><a data-toggle="collapse" data-parent="#accordion"
-                            href="member.html">會員資料</a>
+                    <h4 class="panel-title">
+                        <a href="member.html">會員資料</a>
                     </h4>
                 </div>
             </div>
             <div class="panel panel-default">
                 <div class="panel-heading">
-                    <h4 class="panel-title"><a data-toggle="collapse" data-parent="#accordion"
-                            href="booking_manage.html">訂位管理</a>
+                    <h4 class="panel-title">
+                        <a href="booking_manage.html">訂位管理</a>
                     </h4>
                 </div>
             </div>
             <div class="panel panel-default default">
                 <div class="panel-heading">
-                    <h4 class="panel-title"><a data-toggle="collapse" data-parent="#accordion" href="#">訂餐管理</a>
+                    <h4 class="panel-title">
+                        <a href="#">訂餐管理</a>
                     </h4>
                 </div>
             </div>
@@ -92,6 +93,8 @@
                                 <th>訂餐編號</th>
                                 <th>訂餐時間</th>
                                 <th>訂餐金額</th>
+                                <th></th>
+                                <th></th>
                             </tr>
                         </thead>
                         <tbody>
