--- a/index_list/restaurant_booking_history.html
+++ b/index_list/restaurant_booking_history.html
@@ -33,15 +33,15 @@
             <div class="panel panel-default">
                 <div class="panel-heading">
                     <h4 class="panel-title"><a data-toggle="collapse" data-parent="#accordion"
-                            href="#collapseOne">預位管理</a>
+                            href="#collapseOne">訂位管理</a>
                     </h4>
                 </div>
-                <div id="collapseOne" class="panel-collapse collapse in">
+                <div id="collapseOne" class="panel-collapse collapse">
                     <div class="little_title">
                         <a data-parent="#accordion" href="restaurant_today_booking.html">今日訂位</a>
                     </div>
                 </div>
-                <div id="collapseOne" class="panel-collapse collapse in">
+                <div id="collapseOne" class="panel-collapse collapse default">
                     <div class="little_title">
                         <a data-parent="#accordion" href="restaurant_booking_history.html">歷史訂位紀錄</a>
                     </div>
@@ -50,15 +50,15 @@
             <div class="panel panel-default">
                 <div class="panel-heading">
                     <h4 class="panel-title"><a data-toggle="collapse" data-parent="#accordion"
-                            href="#collapseTwo">訂位管理</a>
+                            href="#collapseTwo">訂餐管理</a>
                     </h4>
                 </div>
-                <div id="collapseTwo" class="panel-collapse collapse in">
+                <div id="collapseTwo" class="panel-collapse collapse">
                     <div class="little_title">
                         <a data-parent="#accordion" href="restaurant_self_pick_up.html">今日自取訂餐</a>
                     </div>
                 </div>
-                <div id="collapseTwo" class="panel-collapse collapse in">
+                <div id="collapseTwo" class="panel-collapse collapse">
                     <div class="little_title">
                         <a data-parent="#accordion" href="restaurant_history_list.html">歷史訂餐紀錄</a>
                     </div>
@@ -70,7 +70,7 @@
                             href="#collapseThree">搜尋</a>
                     </h4>
                 </div>
-                <div id="collapseThree" class="panel-collapse collapse in">
+                <div id="collapseThree" class="panel-collapse collapse">
 
                     <form class="sreach_form">
                         <div class="form-group row form_textbox">
@@ -112,15 +112,15 @@
             <div class="panel panel-default">
                 <div class="panel-heading">
                     <h4 class="panel-title"><a data-toggle="collapse" data-parent="#accordion"
-                            href="#collapseOne">預位管理</a>
+                            href="#collapseOne">訂位管理</a>
                     </h4>
                 </div>
-                <div id="collapseOne" class="panel-collapse collapse in">
+                <div id="collapseOne" class="panel-collapse collapse">
                     <div class="little_title">
                         <a data-parent="#accordion" href="restaurant_today_booking.html">今日訂位</a>
                     </div>
                 </div>
-                <div id="collapseOne" class="panel-collapse collapse in">
+                <div id="collapseOne" class="panel-collapse collapse default">
                     <div class="little_title">
                         <a data-parent="#accordion" href="restaurant_booking_history.html">歷史訂位紀錄</a>
                     </div>
@@ -129,15 +129,15 @@
             <div class="panel panel-default">
                 <div class="panel-heading">
                     <h4 class="panel-title"><a data-toggle="collapse" data-parent="#accordion"
-                            href="#collapseTwo">訂位管理</a>
+                            href="#collapseTwo">訂餐管理</a>
                     </h4>
                 </div>
-                <div id="collapseTwo" class="panel-collapse collapse in">
+                <div id="collapseTwo" class="panel-collapse collapse">
                     <div class="little_title">
                         <a data-parent="#accordion" href="restaurant_self_pick_up.html">今日自取訂餐</a>
                     </div>
                 </div>
-                <div id="collapseTwo" class="panel-collapse collapse in">
+                <div id="collapseTwo" class="panel-collapse collapse">
                     <div class="little_title">
                         <a data-parent="#accordion" href="restaurant_history_list.html">歷史訂餐紀錄</a>
                     </div>
