--- a/index_list/restaurant_login_index.html
+++ b/index_list/restaurant_login_index.html
@@ -28,25 +28,36 @@
 
     <!-- 導覽列 over -->
 
-    <div class="container">
-        <div class="restaurant_name">
-            <h3> X X 餐廳您好 :</h3>
-        </div>
-        <div class="restaurant_management">
-            <div class="restaurant_detail">
-                <h2>訂位管理</h2>
+    <div id="restaurant_login_index">
+        <div class="container">
+            <div class="row">
+                <div class="col-12">
+                    <div class="restaurant_div">
+                        <div class="restaurant_name">
+                            <h3> X X 餐廳您好 :</h3>
+                        </div>
+                        <div class="restaurant_management">
+                            <div class="restaurant_order">
+                                <div class="restaurant_detail">
+                                    <h2>訂位管理</h2>
+                                </div>
+                                <h3>今日訂位數: </h3>
+                                <h3>明日訂位數: </h3>
+                            </div>
+                            <div class="restaurant_order">
+                                <div class="restaurant_detail">
+                                    <h2>訂餐管理</h2>
+                                </div>
+                                <h3>待處理訂餐數: </h3>
+                                <h3>已完成訂單數: </h3>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
-            <h3>今日訂位數: </h3>
-            <h3>明日訂位數: </h3>
-        </div>
-        <div class="div3">
-            <div class="restaurant_detail">
-                <h2>訂餐管理</h2>
-            </div>
-            <h3>待處理訂餐數: </h3>
-            <h3>已完成訂單數:   </h3>
         </div>
     </div>
+
 
     <!-- 頁尾 start -->
 
