--- a/index_list/index.html
+++ b/index_list/index.html
@@ -291,7 +291,7 @@
 
     <!-- 快速搜尋塊 start -->
     <section id="kind_page">
-        <div class="container">
+        <div class="container-fluid">
             <div class="row">
                 <div class="col-md-12">
                     <div class="kind_div">
