--- a/index_list/restaurant_login.html
+++ b/index_list/restaurant_login.html
@@ -29,46 +29,39 @@
     <!-- 導覽列 over -->
 
     <div class="container">
-        <div class="card-head">
-            <p id="backstage_title">後台管理登入</p>
+        <div class="row">
+            <div class="col-12">
+                <div class="restaurant_login_container">
+                    <div class="restaurant_login_title">
+                        <i class="fas fa-user-circle"></i>後台管理登入
+                    </div>
+                    <div class="restaurant_form">
+                        <form action="" method="">
+                            <div class="form-group row">
+                                <label for="account" class="form_account"></label>
+                                <input type="text" id="account" class="form_account" placeholder="請輸入您的帳號" />
+                            </div>
+                            <div class="form-group row">
+                                <label for="secret" class="form_secret"></label>
+                                <input type="password" id="secret" class="form_secret" placeholder="請輸入您的密碼" />
+                            </div>
+                            <div class="form-group row">
+                                <input type="submit" class="btn_member_login" value="登入" />
+                            </div>
+                            <div class="form-group row">
+                                <div class="span_container">
+                                    <div><a href="#forgot_password">忘記密碼?</a></div>
+                                    <div>
+                                        <input type="checkbox" name="remember_password" id="remember_password" />
+                                        <label for="remember_password">記住密碼</label>
+                                    </div>
+                                </div>
+                            </div>
+                        </form>
+                    </div>
+                </div>
+            </div>
         </div>
-        <div class="card-body">
-            <form action="" method="">
-                <div class="form-group row">
-                    <label for="user_account" class="col-md-4 col-form-label text-md-right"><span
-                            id="text_account">帳號</span></label>
-                    <div class="col-md-4">
-                        <input type="text" id="user_account" class="form-control" name="user_account" required
-                            autofocus>
-                    </div>
-                </div>
-
-                <div class="form-group row">
-                    <label for="password" class="col-md-4 col-form-label text-md-right"><span
-                            id="text_account">密碼</span></label>
-                    <div class="col-md-4">
-                        <input type="password" id="password" class="form-control" name="password" required>
-                    </div>
-                </div>
-
-                <div class="form-group row remember_psw">
-                    <a href="#">忘記密碼?</a>
-                    <div class="col-md-4 offset-md-4">
-                        <div class="checkbox">
-                            <label>
-                                <input type="checkbox" name="remember"> 記住密碼
-                            </label>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="">
-                    <button class="login_btn_2">
-                        登入
-                    </button>
-                </div>
-        </div>
-        </form>
     </div>
 
     <!-- 頁尾 start -->
