--- a/index_list/booking_check_page.html
+++ b/index_list/booking_check_page.html
@@ -97,8 +97,12 @@
                             </form>
                         </div>
                         <div class="btn_container_check">
-                            <input type="submit" class="check_btn_back" value="回上一步" />
-                            <input type="submit" class="check_btn_confirm" value="下一步：完成訂位" />
+                            <a href="/index_list/booking_reservation_page.html">
+                                <input type="submit" class="check_btn_back" value="回上一步" />
+                            </a>
+                            <a href="/index_list/booking_finish_page.html">
+                                <input type="submit" class="check_btn_confirm" value="下一步：完成訂位" />
+                            </a>
                         </div>
                     </div>
                 </div>
