--- a/index_list/booking_reservation_page.html
+++ b/index_list/booking_reservation_page.html
@@ -117,7 +117,8 @@
                                 <input type="email" id="reservation_person_email" name="reservation_person_email"
                                        placeholder="your_email@gmail.com" required />
                             </div>
-                            <button type="submit" class="reservation_btn_next">下一步：訂位確認</button>
+                            <input type="submit" class="reservation_input_next" value="下一步：訂位確認"
+                                onclick="location.href='/index_list/booking_check_page.html'" />
                         </form>
                     </div>
                 </div>
