--- a/index_list/booking_finish_page.html
+++ b/index_list/booking_finish_page.html
@@ -58,7 +58,7 @@
             <!-- 訂位確認 start -->
             <div class="finish_container">
                 <div class="finish_person">
-                    <div class="finish_form_title">訂位資料是否正確？</div>
+                    <div class="finish_form_title">訂位已完成</div>
                     <div class="finish_form_show"><b>您的訂位編號：<span>00001</span></b></div>
                     <div class="form_container_finish_wrapper">
                         <form action="#">
@@ -101,8 +101,12 @@
                         </form>
                     </div>
                     <div class="btn_container_finish">
-                        <input type="submit" class="finish_btn_booking_manage" value="訂位管理" />      
-                        <input type="submit" class="finish_btn_back_to_index" value="回首頁" />
+                        <a href="/index_list/booking_manage.html">
+                            <input type="submit" class="finish_btn_booking_manage" value="訂位管理" />      
+                        </a>
+                        <a href="/index_list/index.html">
+                            <input type="submit" class="finish_btn_back_to_index" value="回首頁" />
+                        </a>
                     </div>
                 </div>
             </div>
