restaurant_page update

--- a/index_list/restaurant_page.html
+++ b/index_list/restaurant_page.html
@@ -92,7 +92,7 @@
         <div class="shop_container">
 
             <div class="shop_wrapper" id="infomation">
-                <h2><a href="#">義式料理</a></h2>
+                <h2><a href="/index_list/list.html">義式料理</a></h2>
                 <div class="top_flex">
                     <h4 class="shop-title fs-1 flex4">Aqua Tea&nbsp;水相餐廳</h4>
                     <input type="button" class="shop_menu flex1" value="菜單" />
