--- a/index_list/index.html
+++ b/index_list/index.html
@@ -371,6 +371,12 @@
     </section>
     <!-- 快速搜尋塊 end -->
 
+    <!-- 置頂鈕 start -->         
+    <button type="button" class="btn btn-floating btn-lg" id="btn_back_to_top" onclick="topfunction()" title="Go to top">         
+        <i class="fas fa-arrow-up"></i>         
+        </button>         
+    <!-- 置頂鈕 over -->
+
     <!-- 頁尾 start -->
 
     <div class="footer_page"></div>
