--- a/index_list/orderdisaplay.html
+++ b/index_list/orderdisaplay.html
@@ -111,7 +111,7 @@
                   <tr>
                      <td><b>團長:</b></td>
                   </tr>
-                  <tr>
+                  <!-- <tr>
                      <td>
                         <label class="dropbtn" id="dropbtn" for=""><b>
                               <div>已點餐團員(3):</div></label>
@@ -126,21 +126,21 @@
             </ul>
          </div>
          </td>
-         </tr>
+         </tr> -->
 
-         <tr>
-            <td>總金額：＊＊＊
-               <br><br>
-               <button type="button" class="btn_view">檢視已點清單</button>
-            </td>
-         </tr>
-         </tbody>
-         </table>
+                  <tr>
+                     <td>總金額：＊＊＊
+                        <br><br>
+                        <button type="button" class="btn_view">檢視已點清單</button>
+                     </td>
+                  </tr>
+               </tbody>
+            </table>
+         </div>
+         <div class="container order_checkbtn rwd_order_checkbtn d-flex flex-row-reverse">
+            <button id="checkout" type="button" class="btn btn-danger btn-lg ">去結帳</button>
+         </div>
       </div>
-      <div class="container order_checkbtn rwd_order_checkbtn d-flex flex-row-reverse">
-         <button id="checkout" type="button" class="btn btn-danger btn-lg ">去結帳</button>
-      </div>
-   </div>
    </div>
 
    </div>
@@ -150,7 +150,7 @@
 
 
    <footer>
-      <footer class="footerpage"></footer>
+      <footer class="footerpage footer_page"></footer>
    </footer>
 
 
