--- a/index_list/orderfinished.html
+++ b/index_list/orderfinished.html
@@ -38,7 +38,7 @@
   </div>
 
   <footer>
-    <footer class="footerpage"></footer>
+    <footer class="footerpage footer_page"></footer>
   </footer>
 
   <script>
