--- a/index_list/orderpage.html
+++ b/index_list/orderpage.html
@@ -19,6 +19,7 @@
     <script src="js/jquery.min.js"></script>
     <script src="js/popper.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
+    <script src="js/order.js"></script>
 </head>
 
 <body>
@@ -29,9 +30,9 @@
 
     <div class="scroll menu_group sticky-top">
             <div class="container-fluid" id="menu_group">
-                <button type="button" class="oval menu_group_list" onclick="btn_menugroup">開胃菜</button>
-                <button type="button" class="oval menu_group_list" onclick="group_2">沙拉</button>
-                <button type="button" class="oval menu_group_list">湯</button>
+                <button type="button" class="oval menu_group_list" onclick="javascript:btn_group1();">開胃菜</button>
+                <button type="button" class="oval menu_group_list" onclick="jabascript:btn_group2();">沙拉</button>
+                <button type="button" class="oval menu_group_list" onclick="javascript:btn_group3();">湯</button>
                 <button type="button" class="oval menu_group_list">義式燉飯</button>
                 <button type="button" class="oval menu_group_list">義大利麵</button>
                 <button type="button" class="oval menu_group_list">主廚排餐</button>
@@ -472,33 +473,6 @@
             $(".header_page").load("header.html");
             $(".footer_page").load("footer.html");
         });
-
-        // 置頂按鈕:點選後回到頂端
-        function topfunction() {
-            document.documentElement.scrollTop = 0;
-        }
-
-        // 商品分類列表定住
-        // https://www.w3schools.com/howto/tryit.asp?filename=tryhow_js_navbar_sticky
-
-        // 商品分類列表:點選後跳到該分類
-
-        // 加入購物車button按下後，header購物車+1
-
-        // 跳頁面
-        function btncheckout(){
-            window.location.href='shoppingchar.html';
-        }
-        
-        function btn_grouporder(){
-            window.location.href='orderpage_group_order_on.html';
-        }
-
-        // 複製揪團連結
-        function copyinput(){
-          document.getElementById('copyinput').select()
-          document.execCommand('copy')
-        }
     </script>
 
 </body>
