0222購物車jsx新增

--- a/index_list/shoppingchar.html
+++ b/index_list/shoppingchar.html
@@ -57,13 +57,14 @@
                                 </td>
                             </tr>
 
-                            <!-- 餐點顯示欄位 -->
                             <tr class="shopping-row" id="shopping-row">
                                 <td>
-                                    <input class="shopping-checkbox checkmark" id="shopping-checkbox" type="checkbox" name="shopping-checkbox" />
+                                    <input class="shopping-checkbox checkmark" id="shopping-checkbox" type="checkbox"
+                                        name="shopping-checkbox" />
                                 </td>
                                 <td class="wrapper">
-                                    <img src="img/image_shoppingchar/imge01.jpeg" class="img-fluid img-thumbnail" alt="">
+                                    <img src="img/image_shoppingchar/imge01.jpeg" class="img-fluid img-thumbnail"
+                                        alt="">
                                 </td>
                                 <td>
                                     <span id="ordername" class="ordername">餐點名</span>
@@ -72,7 +73,7 @@
                                     <span>$123</span>
                                 </td>
                                 <td>
-                                    <!-- 數量增減 -->
+
                                     <span class="qty-squre">
                                         <input id="qtyminus" type="button" value="-" class="qty-btn">
                                         <input type="text" value="1" class="qty" name="quantity">
@@ -86,14 +87,14 @@
                                     <span>刪除</span>
                                 </td>
                             </tr>
-                            <!-- end of 餐點顯示欄位 -->
-                            <!-- 2 -->
                             <tr class="shopping-row" id="shopping-row">
                                 <td>
-                                    <input class="shopping-checkbox checkmark" id="shopping-checkbox" type="checkbox" name="shopping-checkbox" />
+                                    <input class="shopping-checkbox checkmark" id="shopping-checkbox" type="checkbox"
+                                        name="shopping-checkbox" />
                                 </td>
                                 <td class="wrapper">
-                                    <img src="img/image_shoppingchar/imge02.jpeg" class="img-fluid img-thumbnail" alt="">
+                                    <img src="img/image_shoppingchar/imge02.jpeg" class="img-fluid img-thumbnail"
+                                        alt="">
                                 </td>
                                 <td>
                                     <span id="ordername" class="ordername">餐點名</span>
@@ -102,7 +103,6 @@
                                     <span>$123</span>
                                 </td>
                                 <td>
-                                    <!-- 數量增減 -->
                                     <span class="qty-squre">
                                         <input id="qtyminus" type="button" value="-" class="qty-btn">
                                         <input type="text" value="1" class="qty" name="quantity">
@@ -116,44 +116,15 @@
                                     <span>刪除</span>
                                 </td>
                             </tr>
-                            <!-- 2 -->
-                            <!-- 3 -->
-                            <tr class="shopping-row" id="shopping-row">
-                                <td>
-                                    <input class="shopping-checkbox checkmark" id="shopping-checkbox" type="checkbox" name="shopping-checkbox" />
-                                </td>
-                                <td class="wrapper">
-                                    <img src="img/image_shoppingchar/imge03.jpeg" class="img-fluid img-thumbnail" alt="">
-                                </td>
-                                <td>
-                                    <span id="ordername" class="ordername">餐點名</span>
-                                </td>
-                                <td>
-                                    <span>$123</span>
-                                </td>
-                                <td>
-                                    <!-- 數量增減 -->
-                                    <span class="qty-squre">
-                                        <input id="qtyminus" type="button" value="-" class="qty-btn">
-                                        <input type="text" value="1" class="qty" name="quantity">
-                                        <input id="qtyplus" type="button" value="+" class="qty-btn">
-                                    </span>
-                                </td>
-                                <td>
-                                    <span>$1234</span>
-                                </td>
-                                <td class="delete-shopping">
-                                    <span>刪除</span>
-                                </td>
-                            </tr>
-                            <!-- 3 -->
 
                             <tr class="shopping-row" id="shopping-row">
                                 <td>
-                                    <input class="shopping-checkbox checkmark" id="shopping-checkbox" type="checkbox" name="shopping-checkbox" />
+                                    <input class="shopping-checkbox checkmark" id="shopping-checkbox" type="checkbox"
+                                        name="shopping-checkbox" />
                                 </td>
                                 <td class="wrapper">
-                                    <img src="img/image_shoppingchar/imge01.jpeg" class="img-fluid img-thumbnail" alt="">
+                                    <img src="img/image_shoppingchar/imge03.jpeg" class="img-fluid img-thumbnail"
+                                        alt="">
                                 </td>
                                 <td>
                                     <span id="ordername" class="ordername">餐點名</span>
@@ -162,7 +133,38 @@
                                     <span>$123</span>
                                 </td>
                                 <td>
-                                    <!-- 數量增減 -->
+                                    <span class="qty-squre">
+                                        <input id="qtyminus" type="button" value="-" class="qty-btn">
+                                        <input type="text" value="1" class="qty" name="quantity">
+                                        <input id="qtyplus" type="button" value="+" class="qty-btn">
+                                    </span>
+                                </td>
+                                <td>
+                                    <span>$1234</span>
+                                </td>
+                                <td class="delete-shopping">
+                                    <span>刪除</span>
+                                </td>
+                            </tr>
+
+
+                            <tr class="shopping-row" id="shopping-row">
+                                <td>
+                                    <input class="shopping-checkbox checkmark" id="shopping-checkbox" type="checkbox"
+                                        name="shopping-checkbox" />
+                                </td>
+                                <td class="wrapper">
+                                    <img src="img/image_shoppingchar/imge01.jpeg" class="img-fluid img-thumbnail"
+                                        alt="">
+                                </td>
+                                <td>
+                                    <span id="ordername" class="ordername">餐點名</span>
+                                </td>
+                                <td>
+                                    <span>$123</span>
+                                </td>
+                                <td>
+
                                     <span class="qty-squre">
                                         <input id="qtyminus" type="button" value="-" class="qty-btn">
                                         <input type="text" value="1" class="qty" name="quantity">
@@ -185,9 +187,11 @@
                         <div class="row">
                             <div class="col-12">
                                 <div class="mobile_shopping_div">
-                                    <input class="shopping-checkbox checkmark" id="shopping-checkbox" type="checkbox" name="shopping-checkbox" />
+                                    <input class="shopping-checkbox checkmark" id="shopping-checkbox" type="checkbox"
+                                        name="shopping-checkbox" />
                                     <div class="mobile_shopping_img">
-                                        <img src="img/image_shoppingchar/imge01.jpeg" class="img-fluid img-thumbnail" alt="">
+                                        <img src="img/image_shoppingchar/imge01.jpeg" class="img-fluid img-thumbnail"
+                                            alt="">
                                     </div>
                                     <div class="mobile_shopping_text">
                                         <span class="mobile_span">餐點名</span>
@@ -204,9 +208,11 @@
                                     </div>
                                 </div>
                                 <div class="mobile_shopping_div">
-                                    <input class="shopping-checkbox checkmark" id="shopping-checkbox" type="checkbox" name="shopping-checkbox" />
+                                    <input class="shopping-checkbox checkmark" id="shopping-checkbox" type="checkbox"
+                                        name="shopping-checkbox" />
                                     <div class="mobile_shopping_img">
-                                        <img src="img/image_shoppingchar/imge02.jpeg" class="img-fluid img-thumbnail" alt="">
+                                        <img src="img/image_shoppingchar/imge02.jpeg" class="img-fluid img-thumbnail"
+                                            alt="">
                                     </div>
                                     <div class="mobile_shopping_text">
                                         <span class="mobile_span">餐點名</span>
@@ -223,9 +229,11 @@
                                     </div>
                                 </div>
                                 <div class="mobile_shopping_div">
-                                    <input class="shopping-checkbox checkmark" id="shopping-checkbox" type="checkbox" name="shopping-checkbox" />
+                                    <input class="shopping-checkbox checkmark" id="shopping-checkbox" type="checkbox"
+                                        name="shopping-checkbox" />
                                     <div class="mobile_shopping_img">
-                                        <img src="img/image_shoppingchar/imge03.jpeg" class="img-fluid img-thumbnail" alt="">
+                                        <img src="img/image_shoppingchar/imge03.jpeg" class="img-fluid img-thumbnail"
+                                            alt="">
                                     </div>
                                     <div class="mobile_shopping_text">
                                         <span class="mobile_span">餐點名</span>
@@ -242,9 +250,11 @@
                                     </div>
                                 </div>
                                 <div class="mobile_shopping_div">
-                                    <input class="shopping-checkbox checkmark" id="shopping-checkbox" type="checkbox" name="shopping-checkbox" />
+                                    <input class="shopping-checkbox checkmark" id="shopping-checkbox" type="checkbox"
+                                        name="shopping-checkbox" />
                                     <div class="mobile_shopping_img">
-                                        <img src="img/image_shoppingchar/imge01.jpeg" class="img-fluid img-thumbnail" alt="">
+                                        <img src="img/image_shoppingchar/imge01.jpeg" class="img-fluid img-thumbnail"
+                                            alt="">
                                     </div>
                                     <div class="mobile_shopping_text">
                                         <span class="mobile_span">餐點名</span>
@@ -261,9 +271,11 @@
                                     </div>
                                 </div>
                                 <div class="mobile_shopping_div">
-                                    <input class="shopping-checkbox checkmark" id="shopping-checkbox" type="checkbox" name="shopping-checkbox" />
+                                    <input class="shopping-checkbox checkmark" id="shopping-checkbox" type="checkbox"
+                                        name="shopping-checkbox" />
                                     <div class="mobile_shopping_img">
-                                        <img src="img/image_shoppingchar/imge01.jpeg" class="img-fluid img-thumbnail" alt="">
+                                        <img src="img/image_shoppingchar/imge01.jpeg" class="img-fluid img-thumbnail"
+                                            alt="">
                                     </div>
                                     <div class="mobile_shopping_text">
                                         <span class="mobile_span">餐點名</span>
@@ -286,16 +298,16 @@
 
                 <div class="all-squre" id="all-squre">
                     <label class="media">
-                            <input id="shopping-checkbox" class="shopping-checkbox checkmark"
-                                name="shopping-allcheckbox" type="checkbox" />
-                            <span class="media-body">全選</span>
-                        </label>
+                        <input id="shopping-checkbox" class="shopping-checkbox checkmark" name="shopping-allcheckbox"
+                            type="checkbox" />
+                        <span class="media-body">全選</span>
+                    </label>
                     <p>
                         <b>總金額(3個商品)$1234</b>
                     </p>
                     <button class="buy-btn">
-                            <b>結帳</b>
-                        </button>
+                        <b>結帳</b>
+                    </button>
                 </div>
             </div>
         </div>
