--- a/index_list/orderpage.html
+++ b/index_list/orderpage.html
@@ -301,7 +301,7 @@
         <div class="food_title">
             <h3>湯</h3>
         </div>
-        <div id=cate3>
+        <div id="cate3">
             <div class="food_list_border">
                 <div class="food_list_detail">
                     <div>
@@ -404,7 +404,7 @@
         <div class="modal-dialog modal-dialog-centered" role="document">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h3 class="modal-title" id="group_on_modal_title">已開啟</h3><br>
+                    <h3 class="modal-title" id="group_on_modal_title">已開啟</h3><br />
                     <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span
                             aria-hidden="true">&times;</span></button>
                 </div>
