--- a/index_list/member_register.html
+++ b/index_list/member_register.html
@@ -70,7 +70,7 @@
                             </div>
                         </div>
                         <div class="btn_div">
-                            <button class="register_btn">註冊</button>
+                            <button class="register_btn"><a href="member_login.html">註冊</a></button>
                         </div>
                     </form>
                 </div>
