--- a/index_list/member_login.html
+++ b/index_list/member_login.html
@@ -50,7 +50,7 @@
                             <input type="password" id="secret" class="form_secret" placeholder="請輸入您的密碼" />
                         </div>
                         <div class="form-group row">
-                            <input type="submit" class="btn_member_login" value="登入" />
+                            <input type="button" class="btn_member_login" value="登入" onclick="loginClick()"/>
                         </div>
                         <div class="form-group row">
                             <div class="span_container forgot">
@@ -82,6 +82,10 @@
             $(".header_page").load("header.html");
             $(".footer_page").load("footer.html");
         });
+
+        function loginClick() {
+            window.location = "member_login_success.html";
+        }
 
         function myFunction() {
             window.location = "member_register.html";
