--- a/index_list/member_login_success.html
+++ b/index_list/member_login_success.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="refresh" content="5;url= https://www.youtube.com/?gl=TW&hl=zh-tw ">
     <title>食字路口 Food Crossroads</title>
 
 
@@ -16,6 +17,8 @@
     <link rel="stylesheet" href="css/login.css">
     <!-- RWD -->
     <link rel="stylesheet" href="css/style.css">
+
+    <link rel="stylesheet" href="css/member_login_success.css">
     
     <script src="js/jquery.min.js"></script>
     <script src="js/popper.min.js"></script>
