--- a/index_list/member.html
+++ b/index_list/member.html
@@ -30,13 +30,13 @@
 
     <aside class="aside_menu">
         <div class="panel-group" id="accordion">
-            <div class="panel panel-default">
+            <div class="panel panel-default default">
                 <div class="panel-heading">
                     <h4 class="panel-title"><a href="#">會員資料</a>
                     </h4>
                 </div>
             </div>
-            <div class="panel panel-default default">
+            <div class="panel panel-default">
                 <div class="panel-heading">
                     <h4 class="panel-title"><a href="booking_manage.html">訂位管理</a>
                     </h4>
@@ -82,7 +82,7 @@
         <div class="container-fluid member_div">
             <div class="row">
                 <div class="col-md-12">
-                    <form>
+                    <form class="member_form">
                         <div>
                             <p class="title_member_edit">會員資料</p>
                         </div>
