--- a/index_list/restaurant_login.html
+++ b/index_list/restaurant_login.html
@@ -46,14 +46,14 @@
                                 <input type="password" id="secret" class="form_secret" placeholder="請輸入您的密碼" />
                             </div>
                             <div class="form-group row">
-                                <input type="submit" class="btn_member_login" value="登入" />
+                                <input type="button" class="btn_member_login" value="登入" onclick="login()" />
                             </div>
                             <div class="form-group row">
-                                <div class="span_container">
+                                <div class="span_container forgot">
                                     <div><a href="#forgot_password">忘記密碼?</a></div>
                                     <div>
                                         <input type="checkbox" name="remember_password" id="remember_password" />
-                                        <label for="remember_password">記住密碼</label>
+                                        <span>記住密碼</span>
                                     </div>
                                 </div>
                             </div>
@@ -75,6 +75,10 @@
             $(".header_page").load("header.html");
             $(".footer_page").load("footer.html");
         });
+
+        function login() {
+            window.location = "index.html";
+        }
     </script>
 </body>
 
