--- a/index_list/restaurant_login_index.html
+++ b/index_list/restaurant_login_index.html
@@ -34,7 +34,7 @@
                 <div class="col-12">
                     <div class="restaurant_div">
                         <div class="restaurant_name">
-                            <h3> X X 餐廳您好 :</h3>
+                            <h3><span>Aqua Tea 水相餐廳</span> 您好 :</h3>
                         </div>
                         <div class="restaurant_management">
                             <div class="restaurant_order">
