--- a/index_list/member_register_success.html
+++ b/index_list/member_register_success.html
@@ -14,6 +14,7 @@
     <link rel="stylesheet" href="css/login.css" />
     <!-- RWD -->
     <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="css/member_login_success.css" />
 
     <script src="js/jquery.min.js"></script>
     <script src="js/popper.min.js"></script>
