--- a/index_list/orderpage.html
+++ b/index_list/orderpage.html
@@ -19,7 +19,7 @@
     <script src="js/jquery.min.js"></script>
     <script src="js/popper.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
-    <script src="js/order.js"></script>
+    <!-- <script src="js/order.js"></script> -->
 </head>
 
 <body>
@@ -47,11 +47,11 @@
 
     <nav aria-label="breadcrumb" class="breaddiv">
         <ul class="breadcrumb">
-           <li class="breadcrumb-item"><a href="index.html"><span>首頁</span></a></li>
-           <li class="breadcrumb-item"><a href="restaurant_page.html"><span>aqua水相餐廳</span></a></li>
-           <li class="breadcrumb-item active" aria-current="page"><span>我要訂餐</span></li>
+            <li class="breadcrumb-item"><a href="index.html"><span>首頁</span></a></li>
+            <li class="breadcrumb-item"><a href="restaurant_page.html"><span>aqua水相餐廳</span></a></li>
+            <li class="breadcrumb-item active" aria-current="page"><span>我要訂餐</span></li>
         </ul>
-     </nav>
+    </nav>
 
 
     <div id="group_1" class="d-flex flex-column">
@@ -76,7 +76,7 @@
                     </div>
                     <!-- 加入購物車 -->
                     <div>
-                        <button class="btn_add_cart">加入購物車</button>
+                        <button class="btn_add_cart" data-toggle="modal" data-target="#char_remark_modal">加入購物車</button>
                     </div>
                 </div>
             </div>
@@ -364,6 +364,28 @@
         </div>
     </div>
 
+    <!-- 加入購物車之餐點備註 -->
+    <div class="modal fade" id="char_remark_modal" tabindex="-1" role="dialog" aria-labelledby="char_remark_modal_title"
+    aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h3 class="modal-title" id="char_remark_modal_title">餐點備註</h3><br>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span
+                        aria-hidden="true">&times;</span></button>
+            </div>
+            <div class="modal-body">
+                <input type="text" value="不要辣、不要蔥...." />
+            </div>
+            <div class="modal-footer d-flex justify-content-center">
+                <button type="button" class="btn_cancel" data-dismiss="modal">取消</button>
+                <button type="button" class="btn_yes" data-dismiss="modal">確定</button>
+            </div>
+        </div>
+    </div>
+</div>
+
+
 
 
     <!-- 揪團結帳 -->
@@ -441,6 +463,84 @@
             $(".header_page").load("header.html");
             $(".footer_page").load("footer.html");
         });
+
+        // 數量加減
+        function qty() {
+            var aAdd = document.querySelectorAll(".add");
+            var sub = document.querySelectorAll(".sub");
+            for (var i = 0; i < aAdd.length; i++) {
+                aAdd[i].onclick = function () {
+                    var num = Number(this.previousElementSibling.value);
+                    num++;
+                    this.previousElementSibling.value = num;
+                    // var price = this.previousElementSibling.previousElementSibling.previousElementSibling.firstElementChild.innerHTML;
+                    // this.nextElementSibling.firstElementChild.innerHTML = price * num;
+                }
+            }
+            for (var i = 0; i < sub.length; i++) {
+                sub[i].onclick = function () {
+                    var num = Number(this.nextElementSibling.value);
+                    if (num > 1) {
+                        num--;
+                    }
+                    this.nextElementSibling.value = num;
+                    // var price = this.previousElementSibling.firstElementChild.innerHTML;
+                    // this.nextElementSibling.nextElementSibling.nextElementSibling.firstElementChild.innerHTML = price * num;
+                }
+            }
+
+        }
+
+
+        $(document).ready(function () {
+            $(".header_page").load("header.html");
+            $(".footer_page").load("footer.html");
+        });
+
+
+        // 置頂按鈕:點選後回到頂端
+        function topfunction() {
+            document.documentElement.scrollTop = 0;
+        }
+
+        // 商品分類列表:點選後跳到該分類
+
+        // 加入購物車button按下後，header購物車+1
+
+        // 跳頁面
+        function btncheckout() {
+            window.location.href = 'shoppingchar.html';
+        }
+
+        function btn_grouporder() {
+            window.location.href = 'orderpage_group_order_on.html';
+        }
+
+        function btn_group1() {
+            window.location.hash = "#group_1";
+        }
+
+        function btn_group2() {
+            window.location.hash = "#group_2";
+        }
+
+        function btn_group3() {
+            window.location.hash = "#group_3";
+        }
+
+        function btn_orderdisaplay() {
+            window.location.href = 'orderdisaplay.html';
+        }
+
+
+
+
+        // 複製揪團連結
+        function copyinput() {
+            document.getElementById('copyinput').select()
+            document.execCommand('copy')
+        }
+
     </script>
 
 </body>
