--- a/index_list/index.html
+++ b/index_list/index.html
@@ -155,7 +155,9 @@
                             </div>
 
                             <div class="dropdown">
-                                <button class="search_btn">搜尋</button>
+                                <a href="">
+                                    <button class="search_btn">搜尋</button>
+                                </a>
                             </div>
                         </div>
                     </form>
@@ -298,15 +300,15 @@
                         <div>
                             <h3>今天要吃什麼</h3>
                         </div>
-                        <div class="water_fall">
-                            <div class="kind_span">
-                                <a href="/search?keyword=美式料理" title="美式料理">
+                        <ul class="water_fall">
+                            <li class="kind_span">
+                                <a href="list_demo_kind.html" title="義式料理">
                                     <div class="index_img">
-                                        <img src="img/american_food.png" alt="美式料理">
-                                        <span>美式料理</span>
+                                        <img src="img/italian_food.png" alt="義式料理">
+                                        <span>義式料理</span>
                                     </div>
                                 </a>
-                            </div>
+                            </li>
                             <li class="kind_span">
                                 <a href="/search?keyword=中式料理" title="中式料理">
                                     <div class="index_img">
@@ -324,10 +326,10 @@
                                 </a>
                             </li>
                             <li class="kind_span">
-                                <a href="/search?keyword=義式料理" title="義式料理">
+                                <a href="/search?keyword=美式料理" title="美式料理">
                                     <div class="index_img">
-                                        <img src="img/italian_food.png" alt="義式料理">
-                                        <span>義式料理</span>
+                                        <img src="img/american_food.png" alt="美式料理">
+                                        <span>美式料理</span>
                                     </div>
                                 </a>
                             </li>
@@ -363,7 +365,7 @@
                                     </div>
                                 </a>
                             </li>
-                        </div>
+                        </ul>
                     </div>
                 </div>
             </div>
