修改自動跳轉頁面

--- a/index_list/member_register_success.html
+++ b/index_list/member_register_success.html
@@ -52,6 +52,12 @@
         $(".header_page").load("header.html");
         $(".footer_page").load("footer.html");
       });
+
+      function countDown() {
+        setTimeout("location.href='./member_login.html'", 1500);
+      }
+
+      countDown();
     </script>
   </body>
 </html>
