--- a/index_list/member_login_success.html
+++ b/index_list/member_login_success.html
@@ -1,33 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="refresh" content="5;url= https://www.youtube.com/?gl=TW&hl=zh-tw ">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>食字路口 Food Crossroads</title>
 
-
     <!-- bootstrap -->
-    <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/bootstrap.min.css" />
     <!-- fontAwesome -->
-    <link rel="stylesheet" href="fontawesome-free-5.15.4-web/css/all.min.css">
+    <link rel="stylesheet" href="fontawesome-free-5.15.4-web/css/all.min.css" />
     <!-- mainStyle -->
-    <link rel="stylesheet" href="css/login.css">
+    <link rel="stylesheet" href="css/login.css" />
     <!-- RWD -->
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/style.css" />
 
-    <link rel="stylesheet" href="css/member_login_success.css">
-    
+    <link rel="stylesheet" href="css/member_login_success.css" />
+
     <script src="js/jquery.min.js"></script>
     <script src="js/popper.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
+  </head>
 
-</head>
-
-<body>
-
+  <body>
     <!-- header start -->
 
     <div class="header_page"></div>
@@ -35,34 +30,35 @@
     <!-- header over -->
 
     <section id="success_section">
-        <div class="container-fluid success_div">
-            <div class="row">
-                <div class="col-12">
-                    <div class="member_success">
-                        <div class="member_success_div">
-                            <h2>登入成功</h2>
-                            <p>自動跳轉回原頁面...</p>
-                        </div>
-                    </div>
-                </div>
+      <div class="container-fluid success_div">
+        <div class="row">
+          <div class="col-12">
+            <div class="member_success">
+              <div class="member_success_div">
+                <h2>登入成功</h2>
+                <p>自動跳轉回原頁面...</p>
+              </div>
             </div>
+          </div>
         </div>
-
+      </div>
     </section>
-
-
 
     <!-- footer start -->
     <div class="footer_page"></div>
     <!-- footer over -->
 
-
     <script type="text/javascript">
-        $(function () {
-            $(".header_page").load("header.html");
-            $(".footer_page").load("footer.html");
-        });
-    </script>
-</body>
+      $(function () {
+        $(".header_page").load("header.html");
+        $(".footer_page").load("footer.html");
+      });
 
+      function countDown() {
+        setTimeout("location.href='./booking_reservation_page.html'", 1500);
+      }
+
+      countDown();
+    </script>
+  </body>
 </html>
