--- a/index_list/orderdisaplay.html
+++ b/index_list/orderdisaplay.html
@@ -111,26 +111,8 @@
                   <tr>
                      <td><b>團長:</b></td>
                   </tr>
-                  <!-- <tr>
-                     <td>
-                        <label class="dropbtn" id="dropbtn" for=""><b>
-                              <div>已點餐團員(3):</div></label>
-                        </b> &nbsp
-                        <i class="fas fa-sort-down fa-xs" id="order_member"></i>
-         </div>
-         <div class="show_member rwd_show_member">
-            <ul style="list-style-type:none;" class="show_member_detail rwd_show_member_detail">
-               <li>團員一</li>
-               <li>團員二</li>
-               <li>團員三</li>
-            </ul>
-         </div>
-         </td>
-         </tr> -->
-
                   <tr>
-                     <td>總金額：＊＊＊
-                        <br><br>
+                     <td>
                         <button type="button" class="btn_view">檢視已點清單</button>
                      </td>
                   </tr>
@@ -138,23 +120,16 @@
             </table>
          </div>
          <div class="container order_checkbtn rwd_order_checkbtn d-flex flex-row-reverse">
-            <button id="checkout" type="button" class="btn btn-danger btn-lg ">去結帳</button>
+            <button id="checkout" type="button">去結帳</button>
          </div>
       </div>
    </div>
 
 
 
-
-
-
-
    <footer>
       <footer class="footerpage footer_page"></footer>
    </footer>
-
-
-
 
    <script>
       $(".headerpage").load("header.html");
