--- a/index_list/orderdisaplay.html
+++ b/index_list/orderdisaplay.html
@@ -109,7 +109,7 @@
                   </tr>
 
                   <tr>
-                     <td><b>團長:</b></td>
+                     <td><b>團長:李曉明</b></td>
                   </tr>
                   <tr>
                      <td>
